# test_work

./: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
articles_tracker/config/: asgi.py  settings.py  wsgi.py
